@@ -22,6 +22,9 @@ Core and Builtins
 Library
 -------
 
+- Issue $9907: Fix tab handling on OSX when using editline by calling
+  rl_initialize first, then setting our custom defaults, then reading .editrc.
+
 - Issue #4188: Avoid creating dummy thread objects when logging operations
   from the threading module (with the internal verbose flag activated).
 
